<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24px"
            android:title="@string/our_menu" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/ic_shopping_cart_black_24px"
            android:title="@string/check_out" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_on_black_24px"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24px"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_rate_review_black_24px"
            android:title="@string/reviews" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/contact_us" />
    </group>

</menu>
